[package]
name = "api"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
futures = "0.3.1"
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
listenfd = "0.3.3"
quote = "1.0.3"
reqwest = { version = "0.10.1", features = ["json"] }
search_client =  { path = "../search-client" }
tokio = { version = "0.2", features = ["macros", "rt-core", "blocking"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.44"
warp = "0.2.2"
