[package]
name = "api"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
base64 = "0.12.0"
futures = "0.3.4"
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
listenfd = "0.3.3"
quote = "^1.0.3"
reqwest = { version = "0.10.4", features = ["json"] }
search_client =  { path = "../search-client" }
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
serde = "^1.0.103"
serde_derive = "^1.0.103"
serde_json = "1.0.52"
warp = "^0.2.2"

[dev-dependencies]
async-trait = "0.1.30"
pretty_assertions = "0.6.1"
tokio-test = "0.2.1"