[package]
name = "api"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-graphql = "1.16.14"
async-graphql-warp = "1.16.10"
base64 = "0.12.3"
futures = "0.3.5"
reqwest = { version = "0.10.7", features = ["json"] }
search_client =  { path = "../search-client", features = ["graphql"] }
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1.17"
tracing-subscriber = "0.2.9"
serde = "^1.0.103"
serde_derive = "^1.0.103"
serde_json = "1.0.57"
warp = "^0.2.2"

[dev-dependencies]
async-trait = "0.1.36"
pretty_assertions = "0.6.1"
tokio-test = "0.2.1"
test-case = "1.0.0"
