[package]
name = "doc_index_updater"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Matt Doughty <matt.doughty@red-badger.com>", "Pedro Martin <pedro.martin@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
async-ssh2 = { version = "0.1", git = "https://github.com/spebern/async-ssh2.git" }
async-trait = "0.1.24"
azure_jwt = { git="https://github.com/majikandy/azure-jwt", branch = "upgrade-jsonwebtokens", default-features = false,  features = ["vendored"] }
azure_sdk_core = "0.40.1"
azure_sdk_service_bus = "0.43.0"
azure_sdk_storage_blob = "0.40.1"
azure_sdk_storage_core = "0.40.1"
base64 = "0.11.0"
chrono = "0.4.11"
futures = "0.3.4"
hyper = "0.13"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
redis = { version = "0.15.1", features = ["tokio-rt-core"] }
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["json"] }
search_client =  { path = "../search-client" }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"
sha1 = "0.6.0"
thiserror = "1.0.11"
time = "0.1"
tokio = { version = "0.2", features = ["macros", "time"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.3"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.3"
url = "2.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { git = "https://github.com/m-doughty/warp", branch = "add-xml-support" }


[dev-dependencies]
test-case = "1.0.0"
tokio-test = "0.2.0"
serde_json = "1.0.51"
net2 = "0.2.33"
serde-xml-rs = "0.4.0"
pretty_assertions = "0.6.1"
