[package]
name = "doc_index_updater"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Matt Doughty <matt.doughty@red-badger.com>", "Pedro Martin <pedro.martin@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-ssh2 = { version = "0.1.1-beta", git = "https://github.com/spebern/async-ssh2.git" }
async-trait = "0.1.33"
azure_sdk_core = "0.43.3"
azure_sdk_service_bus = "0.44.1"
azure_sdk_storage_blob = "0.43.3"
azure_sdk_storage_core = "0.43.3"
base64 = "0.12.1"
bytes = "*"
chrono = "0.4.11"
futures = "0.3.5"
hyper = "0.13"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
piper = "0.1.3"
redis = { version = "0.16.0", features = ["tokio-rt-core"] }
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["json"] }
search_client =  { path = "../search-client" }
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0"
sha1 = "0.6.0"
smol = "0.1.11"
thiserror = "1.0.19"
time = "0.1.43"
tokio = { version = "0.2", features = ["macros", "time"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.5"
url = "2.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { git = "https://github.com/m-doughty/warp", branch = "add-xml-support" }

[dev-dependencies]
test-case = "1.0.0"
tokio-test = "0.2.1"
serde_json = "1.0.53"
net2 = "0.2.34"
serde-xml-rs = "0.4.0"
pretty_assertions = "0.6.1"
