[package]
name = "doc_index_updater"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>", "Robin James Kerrison <robinjames.kerrison@red-badger.com>", "Matt Doughty <matt.doughty@red-badger.com>", "Pedro Martin <pedro.martin@red-badger.com>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-dup = "1.2.1"
async-io = "0.1.11" # Dependent on version used by async-ssh2
async-ssh2 = { git = "https://github.com/0xdeafbeef/async-ssh2", rev = "2127c944beb90ea09b0c4e0d768dac4bd1a20c81" } # Updates smol 
async-trait = "0.1.36"
azure_sdk_core = "0.43.6"
azure_sdk_service_bus = "0.44.2"
azure_sdk_storage_blob = "0.45.2"
azure_sdk_storage_core = "0.44.3"
base64 = "0.12.3"
bytes = "0.5.6"
chrono = "0.4.13"
futures = "0.3.5"
hyper = "0.13"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
redis = { version = "0.17.0", features = ["tokio-rt-core"] }
regex = "1.3.9"
reqwest = { version = "0.10.7", features = ["json"] }
search_client =  { path = "../search-client" }
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0"
sha1 = "0.6.0"
thiserror = "1.0.20"
time = "0.1.43"
tokio = { version = "0.2", features = ["macros", "time"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.11"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
warp = { git = "https://github.com/m-doughty/warp", branch = "add-xml-support" }

[dev-dependencies]
net2 = "0.2.34"
pretty_assertions = "0.6.1"
serde_json = "1.0.57"
serde_test = "1.0.115"
serde-xml-rs = "0.4.0"
test-case = "1.0.0"
tokio-test = "0.2.1"
