[package]
name = "import"
version = "0.1.0"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_sdk_core = "0.43.6"
azure_sdk_storage_blob = "0.45.2"
azure_sdk_storage_core = "0.44.3"
calamine = "0.16.1"
chrono = "0.4.9"
clap = {version = "2.33.0", features = ["yaml"]}
csv = "1.1.1"
indicatif = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
md5 = "0.7.0"
regex = "1.3.1"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.42"
sha1 = "0.6.0"
tantivy = "0.13.0"
thiserror = "1.0.20"
tokio = { version = "1.8", features = ["macros", "time"] }

