[package]
name = "search_client"
version = "0.0.1"
authors = ["Matt Doughty <matt.doughty@mhra.gov.uk>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"
license = "MIT"
description = "MHRA Products Search Client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

graphql = ["juniper", "futures"]

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.30"
chrono = "0.4.11"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.52"
tracing = { version = "0.1.13", features = ["attributes"] }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", optional = true }
futures = { version = "0.3.4", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
test-case = "1.0.0"
