[package]
name = "search_client"
version = "0.0.1"
authors = ["Tim Lee <tim.lee@mhra.gov.uk>", "Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
license = "MIT"
description = "MHRA Products Search Client"

[features]
default = []

graphql = ["async-graphql", "futures"]

[dependencies]
anyhow = "1.0.32"
async-graphql = { version = "1.18.2", optional = true }
async-trait = "0.1.41"
chrono = "0.4.19"
futures = { version = "0.3.5", optional = true }
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0.58"
tracing = { version = "0.1.21", features = ["attributes"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
test-case = "1.0.0"
