[package]
name = "search"
version = "0.1.0"
authors = ["Matt Doughty <matt.doughty@mhra.gov.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.6"
awc = "0.2.8"
clap = {version = "2.33.0", features = ["yaml"]}
futures = "0.3.1"
mime = "0.3.14"