[package]
name = "search"
version = "0.1.0"
authors = ["Matt Doughty <matt.doughty@mhra.gov.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0-alpha.1"
actix-web = {version = "2.0.0-alpha.1", features = ["openssl"]}
clap = {version = "2.33.0", features = ["yaml"]}
futures = "0.3.1"
mime = "0.3.14"
rand = "0.7.2"
