[package]
name = "search"
version = "0.1.0"
authors = ["Matt Doughty <matt.doughty@mhra.gov.uk>", "Craig Anderson <craig.anderson@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
futures = "0.3.1"
mime = "0.3.14"
rand = "0.7.2"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["macros", "time"] }
proc-macro2 = "1.0.10"