[package]
name = "storage-logger"
version = "0.1.0"
authors = ["Tim Lee <tim.lee@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
azure_sdk_core = { git = "https://github.com/MindFlavor/AzureSDKForRust", branch = "master" }
azure_sdk_storage_blob = { git = "https://github.com/MindFlavor/AzureSDKForRust", branch = "master" }
azure_sdk_storage_core = { git = "https://github.com/MindFlavor/AzureSDKForRust", branch = "master" }
chrono = "0.4.11"
futures = "0.3.4"
lazy_static = "1.4.0"
md5 = "0.7.0"
tokio = { version = "1.13", features = ["macros", "time"] }

[dev-dependencies]
